--- a/kanban.html
+++ b/kanban.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kanban Board</title>
     <link href="./kanban.css" rel="stylesheet">
+    <script src="kanban.js"></script>
     <script src="https://kit.fontawesome.com/589957875e.js"></script>
 </head>
 <body>
-    <div class="toolbox-cont">
+    <nav class="toolbox-cont">
     <div class ="toolbox-priority-cont">
         <div class="lightpink color"></div>
         <div class="lightgreen color"></div>
@@ -24,6 +25,16 @@
             <i class="fa fa-times" aria-hidden="true"></i>
         </div>
         </div> 
+    </nav>
+    <div class="modal-cont">
+        <textarea class="textArea-cont" placeholder="enter text">
+        </textarea>
+        <div class="priority-color-cont">
+            <div class="lightpink priority-color"></div>
+            <div class="lightgreen priority-color"></div>
+            <div class="lightblue priority-color"></div>
+            <div class="black priority-color active"></div>
+        </div>
     </div>
 </body>
 </html>
