--- a/kanban.html
+++ b/kanban.html
@@ -26,16 +26,18 @@
         </div>
         </div> 
     </nav>
+    <div class="main-cont"></div>
     <div class="modal-cont">
         <textarea class="textArea-cont" placeholder="enter text">
         </textarea>
         <div class="priority-color-cont">
             <div class="lightpink priority-color"></div>
             <div class="lightgreen priority-color"></div>
-            <div class="lightblue priority-color"></div>
-            <div class="black priority-color active"></div>
+            <div class="lightblue priority-color active"></div>
+            <div class="black priority-color "></div>
         </div>
     </div>
+    <script src="https://unpkg.com/shortid-dist@1.0.5/dist/shortid-2.2.13.min.js"></script>
     <script src="kanban.js"></script>
 </body>
 </html>
